@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.4-4
-Date: 2009-01-09
+Version: 0.4-5
+Date: 2009-01-17
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
